// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextLink /> > should allow as override 1`] = `
<div
  class="vars_OD_Base__1f5yyro0"
  data-od-component-provider=""
>
  <a
    class="reset_cursorPointer__1oah0222 reset_a__1oah022a TextLink_root__5ax1bk0"
    rel="noopener noreferrer"
  >
    <span
      class="reset_inlineText__1oah0223 useBoxStyles_textAlign_left__3xgq1lg1 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 reset_inlineText__1oah0223 useBoxStyles_position_relative__3xgq1lg0 useBoxStyles_pointerEvents_none__3xgq1lic"
    >
      Test
    </span>
  </a>
</div>
`;

exports[`<TextLink /> > should match the snapshot 1`] = `
<div
  class="vars_OD_Base__1f5yyro0"
  data-od-component-provider=""
>
  <a
    class="reset_cursorPointer__1oah0222 reset_a__1oah022a TextLink_root__5ax1bk0"
    rel="noopener noreferrer"
  >
    <span
      class="reset_inlineText__1oah0223 useBoxStyles_textAlign_left__3xgq1lg1 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 reset_inlineText__1oah0223 useBoxStyles_position_relative__3xgq1lg0 useBoxStyles_pointerEvents_none__3xgq1lic"
    />
  </a>
</div>
`;
